--- a/QuantumTechnicianApp/Src/App.fx.yaml
+++ b/QuantumTechnicianApp/Src/App.fx.yaml
@@ -131,6 +131,7 @@ App As appinfo:
             GCSecondaryScopeofWorks,
             SecondaryScopeofWorks
         );
+        Refresh(LeadChats);
     StartScreen: =
     Theme: =PowerAppsTheme
 
