--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1681,7 +1681,7 @@ LeadScreen As screen:
         Y: =40
         ZIndex: =13
 
-    Group1 As group:
+    grpZoomPhotoPopUpLdS As group:
         Height: =5
         Width: =5
         X: =40
@@ -1718,7 +1718,7 @@ LeadScreen As screen:
             X: =Parent.Width-Self.Width
             ZIndex: =12
 
-    grpinprogressconfirmationLS_1 As group:
+    grpEstimateNumberEnteringconfirmationLdS As group:
         Height: =5
         Width: =5
         X: =40
