--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1768,8 +1768,10 @@ LeadScreen As screen:
             Font: =Font.Arial
             HoverFill: =RGBA(75, 125, 6, 1)
             OnSelect: |
-                =Set(VarPopUpEstimateNumberResult,true);
+                =//By confirming set VarPopUpEstimateNumberResult variable to true
+                Set(VarPopUpEstimateNumberResult,true);
                 If(VarPopUpEstimateNumberResult=true,
+                //checking in fpestimate file, is entered estimate number with repective technician id is available or not 
                     If(
                         !IsBlank(
                             LookUp(
