--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -84,7 +84,7 @@ DashboardScreen As screen:
                 Circle1 As circle:
                     Fill: =RGBA(255, 191, 0, 1)
                     Height: =30
-                    Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No && (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress")))>0,true,false)
+                    Visible: =If(CountRows(Filter(LeadChats,LeadInformationLID.QQTeamName=User().FullName && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No && (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress")))>0,true,false)
                     Width: =30
                     X: =Parent.Width-Self.Width-20
                     Y: =20
@@ -144,7 +144,7 @@ DashboardScreen As screen:
                 Circle1_1 As circle:
                     Fill: =RGBA(255, 191, 0, 1)
                     Height: =30
-                    Visible: =If(CountRows(Filter(LeadChats,FromEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No && (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress")))>0,true,false)
+                    Visible: =If(CountRows(Filter(LeadChats,'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No && (LeadInformationLID.LeadStatus="Submitted" || LeadInformationLID.LeadStatus="InProgress")))>0,true,false)
                     Width: =30
                     X: =Parent.Width-Self.Width-20
                     Y: =20
